# java_class_manipulation

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
src/: .lib.rs.swp  lib.rs  main.rs
src/fragment/: annotation.rs  mod.rs  stack_frame.rs
src/fragment/constant_pool/: mod.rs
src/fragment/raw/: annotation.rs  mod.rs
src/parsers/: mod.rs
src/parsers/character/: mod.rs
src/parsers/java_type/: mod.rs
src/parsers/jvm8/: mod.rs
src/sized_io/: mod.rs
src/types/: field.rs  mod.rs
